[tool.poetry]
name = "launchpad-controller"
version = "0.1.0"
description = "Simple app for the Novation Launchpad Pro Mk3 to make music with and actually be usable because holy shit there are no good programs for this thing"
authors = ["Boop"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.9.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
